# minic

./: .gitignore  CMakeLists.txt  README.md  final_acceptance_report.md
docs/: ark_backend_investigation.md  implementation_report.md  real_ark_backend_analysis.md  testing_report.md  thesis_mapping.md
examples/: for_call_demo.mc  for_call_demo.mpl  maple_demo.ir.txt  maple_demo.mc  maple_demo.mpl  nested_increment_call.mpl
include/: AST.h  IRGenerator.h  Lexer.h  MapleIRGenerator.h  Parser.h  SemanticAnalyzer.h  SymbolTable.h  Token.h
src/: AST.cpp  IRGenerator.cpp  Lexer.cpp  MapleIRGenerator.cpp  Parser.cpp  SemanticAnalyzer.cpp  SymbolTable.cpp  main.cpp
src/ast/: AST.cpp  AST.h  DotExporter.cpp  DotExporter.h
src/codegen/: CodeGenerator.cpp  CodeGenerator.h
src/ir/: IRGenerator.cpp  IRGenerator.h  IRModule.cpp  IRModule.h
src/lexer/: Lexer.cpp  Lexer.h  Token.cpp  Token.h
src/maple/: CFGDotExporter.cpp  CFGDotExporter.h  IRGenerator.cpp  IRGenerator.h
src/parser/: Parser.cpp  Parser.h
src/semantic/: Semantic.cpp  Semantic.h  SemanticAnalyzer.h  SymbolTable.cpp  SymbolTable.h
tests/: assert_abc_backend_error.sh  assert_ast_dot_contains.sh  assert_cfg_dot_contains.sh  assert_compiler_error.sh  assert_compiler_success.sh  assert_maple_contains.sh  assert_semantic_checks.sh  ast_unary.mc  basic.mc  char_ok.mc  char_type_mismatch.mc  float_ok.mc  float_type_mismatch.mc  for_loop.mc  function_arg_char_type_mismatch.mc  function_arg_float_type_mismatch.mc  function_call.mc  if_else.mc  increment_expression.mc  maple_ast_types.mc  nested_control_flow_call.mc  nested_increment_call.mc  semantic_duplicate_param.mc  semantic_scope_ok.mc  semantic_type_mismatch.mc  semantic_undeclared.mc  test.mc  undefined_var.mc  while.mc
